# codex-cpp-cli

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  test.bat  verify-artifacts.bat
.codex/environments/: environment.toml
.github/workflows/: build-codex-env.yml  ci.yml
include/codex_cpp/: codex_cpp.h
src/: app.cpp  app.hpp  codex_cpp_c_api.cpp  json.hpp  main.cpp  version.hpp
tests/: codex_cpp_tests.cpp
